# pylinac_gui

./: PyLinacGUI.spec  README.md  app_logger.py  config.pfcc.truebeamsh.catphan.json  ctqa_catphan_cmd.py  dicom_helper.py  pylinac_gui.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
phantoms/: catphan.py  fc2.py  helper.py  lasvegas.py  leedstor.py  qc3.py  qckv.py
utils/: helper.py  webservice.py
