[tool.poetry]
name = "pylinacgui"
version = "1.0.0"
description = "pylinac gui wrapper"
authors = ["'Jinkoo <'jinkoo2@hotmail.com'>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
altgraph = "0.17.4"
annotated-types = "0.7.0"
argue = "0.3.1"
babel = "2.16.0"
certifi = "2024.8.30"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
contourpy = "1.3.0"
cycler = "0.12.1"
dnspython = "2.6.1"
email-validator = "2.2.0"
fonttools = "4.53.1"
future = "0.18.3"
idna = "3.10"
imageio = "2.35.1"
kiwisolver = "1.4.7"
lazy-loader = "0.4"
matplotlib = "3.9.2"
networkx = "3.3"
numpy = "1.26.4"
packaging = "24.1"
pefile = "2024.8.26"
pillow = "10.4.0"
plotly = "5.24.1"
py-linq = "1.4.0"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
pydicom = "2.4.4"
pyinstaller-hooks-contrib = "2024.8"
pylinac = { git = "https://github.com/jinkoo2/pylinac.git", rev = "6d69cb005b275ff7abfd7ab8c9cdcb8f8f6c82a4" }
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
pywin32-ctypes = "0.2.3"
PyYAML = "6.0.2"
quaac = "1.0.0"
reportlab = "4.2.2"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "1.14.1"
setuptools = "75.1.0"
six = "1.16.0"
tabulate = "0.9.0"
tenacity = "9.0.0"
tifffile = "2024.8.30"
tkcalendar = "1.6.1"
tqdm = "4.66.5"
ttkbootstrap = "1.10.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
